--- a/src/app/rep/repositories-list/repositories-list.component.html
+++ b/src/app/rep/repositories-list/repositories-list.component.html
@@ -1,22 +1,3 @@
-<!-- <div class="search-container">
-    <mat-form-field appearance="outline">
-      <mat-label>Search for a repository</mat-label>
-      <input matInput [(ngModel)]="searchKeyword" (keyup.enter)="onSearch()" />
-    </mat-form-field>
-    <button mat-raised-button color="primary" (click)="onSearch()">Search</button>
-  </div>
-  
-  <div *ngIf ="(repositories.length > 0)" class="results-container">
-    <div *ngFor="let repo of repositories" class="repo-item">
-      <img [src]="repo.owner.avatar_url" alt="Owner Avatar" class="avatar" />
-      <div>
-        <h3>{{ repo.name }}</h3>
-        <p>Owner: {{ repo.owner.login }}</p>
-        <button mat-button color="accent" (click)="bookmarkRepo(repo)">Bookmark</button>
-      </div>
-    </div>
-  </div>
-   -->
 
    <div class="search-container">
     <mat-form-field appearance="outline">
@@ -50,14 +31,7 @@
       <td mat-cell *matCellDef="let repo"> {{ repo.owner.login }} </td>
     </ng-container>
   
-    <!-- Bookmark Button Column -->
-    <!-- <ng-container matColumnDef="bookmark">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
-      <td mat-cell *matCellDef="let repo">
-        <button mat-raised-button color="accent" (click)="bookmarkRepo(repo)">Bookmark</button>
-      </td>
-    </ng-container> -->
-
+   
      <!-- Bookmark Button Column -->
   <ng-container matColumnDef="bookmark">
     <th mat-header-cell *matHeaderCellDef> Bookmark </th>
@@ -73,7 +47,10 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
   
-  <div *ngIf="repositories.length === 0" class="no-results">
+  <div *ngIf="repositories.length === 0 && !onLoad" class="no-results">
     No repositories found. Try another search term.
   </div>
   
+  <div class="top-bar">
+    <button mat-button color="warn" (click)="logout()">🚪 התנתק</button>
+  </div>
